feat: unique validator and country crud
